--- a/Order summary component challenge hub/index.html
+++ b/Order summary component challenge hub/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/png" href="favicon.png">
 
         <link rel="stylesheet" href="main.css">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700;900&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
                 <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
             </div>
             
-            <div class="generic-component">
+            <div class="plan-card">
 
                 <div id="plan-icon">
                     <img src="./images/icon-music.svg" alt="">
@@ -42,8 +43,6 @@
             <button class="btn-primary">Proceed to Payment</button>
             <button class="btn-secondary">Cancel Order</button>
             
-
-
 
         </div>
     </body>
