--- a/3-column preview card component challenge/index.html
+++ b/3-column preview card component challenge/index.html
@@ -15,26 +15,28 @@
     </head>
 
     <body>
-        <div>
-            <span>
-                <img src="">
-                <h1>SEDANS</h1>
-                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
-                <button>Learn More</button>
-            </span>
-            <span>
-                <img src="">
-                <h1>SUVS</h1>
-                <p>Take a SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-                <button>Learn More</button>
-            </span>
-            <span>
-                <img src="">
-                <h1>LUXURY</h1>
-                <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
-                <button>Learn More</button>
-            </span>
-        </div>
-    </body>
+        <main>
+            <div class="main-container">
+                <span class="sedans">
+                    <img src="./images/icon-sedans.svg">
+                    <h1>SEDANS</h1>
+                    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+                    <button>Learn More</button>
+                </span>
+                <span class="suvs">
+                    <img src="./images/icon-suvs.svg">
+                    <h1>SUVS</h1>
+                    <p>Take a SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+                    <button>Learn More</button>
+                </span>
+                <span class="luxury">
+                    <img src="./images/icon-luxury.svg">
+                    <h1>LUXURY</h1>
+                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+                    <button>Learn More</button>
+                </span>
+            </div>
+        </body>
+    </main>
 
 </html>
