--- a/3-column preview card component challenge/index.html
+++ b/3-column preview card component challenge/index.html
@@ -18,19 +18,19 @@
         <main>
             <div class="main-container">
                 <span class="sedans">
-                    <img src="./images/icon-sedans.svg">
+                    <img src="./images/icon-sedans.svg" alt="Sedan car icon">
                     <h1>SEDANS</h1>
                     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
                     <button>Learn More</button>
                 </span>
                 <span class="suvs">
-                    <img src="./images/icon-suvs.svg">
+                    <img src="./images/icon-suvs.svg" alt="S.U.V car icon">
                     <h1>SUVS</h1>
                     <p>Take a SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                     <button>Learn More</button>
                 </span>
                 <span class="luxury">
-                    <img src="./images/icon-luxury.svg">
+                    <img src="./images/icon-luxury.svg" alt="Luxury car icon">
                     <h1>LUXURY</h1>
                     <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                     <button>Learn More</button>
